# fullstack-backend-task

./: .gitignore  README.md  pyproject.toml
chatapp/: README.md  db.sqlite3
chatapp-frontend/: README.md  package.json
chatapp-frontend/public/: index.html  manifest.json
chatapp-frontend/src/: App.tsx  Chat.tsx
chatapp-frontend/src/components/: ChatMessage.tsx  MobileNav.tsx  NavItem.tsx  SidebarContent.tsx  SidebarWithHeader.tsx
chatapp-frontend/src/utils/: chatAPI.tsx  context.tsx  format.tsx
chatapp/chat/: consumers.py  models.py  serializers.py  urls.py  views.py
chatapp/chat/migrations/: 0001_initial.py  0002_alter_user_name.py
chatapp/chat/tests/: test_websocket.py
chatapp/chatapp/: settings.py  urls.py
